--- a/misconfiguration/mikrotik-graph.yaml
+++ b/misconfiguration/mikrotik-graph.yaml
@@ -2,7 +2,7 @@ id: mikrotik-graph
 
 info:
   name: Mikrotik Router Graphing
-  author: dhiyaneshDK
+  author: dhiyaneshDK,idealphase
   severity: low
   reference: https://www.exploit-db.com/ghdb/4395
   tags: unauth,router
@@ -22,3 +22,9 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        group: 1
+        regex:
+          - '<\/h1>\n(.*):<br \/>'
