--- a/cnvd/2020/CNVD-2020-67113.yaml
+++ b/cnvd/2020/CNVD-2020-67113.yaml
@@ -1,4 +1,4 @@
-id: h5s-video-platform-cnvd-2020-67113-unauth
+id: CNVD-2020-67113
 
 info:
   name: H5S CONSOLE Unauthorized Access Vulnerability (CNVD-2020-67113)
@@ -6,7 +6,7 @@ info:
   severity: medium
   description: Zero Vision Technology (Shanghai) Co., Ltd. H5S CONSOLE Exists Unauthorized Access Vulnerability
   reference: https://vul.wangan.com/a/CNVD-2020-67113 
-  tags: h5s,unauth,h5sconsole
+  tags: h5s,unauth,h5sconsole,cnvd,cnvd2020
 
 requests:
   - method: GET
@@ -17,19 +17,23 @@ requests:
     matchers-condition: and
     matchers:
       - type: word
+        part: body
         words:
-          - 'H5_AUTO'
           - 'strUser'
 	  - 'strPasswd'
-	  -'H5_DEV'
-        part: body
         condition: and
+
+      - type: word
+        part: body
+        words:
+          - 'H5_AUTO'
+	  - 'H5_DEV'
+        condition: or
 
       - type: word
         part: header
         words:
-          - "json
-        negative: true
+          - "application/json"
 
       - type: status
         status:
