--- a/cnvd/2020/CNVD-2020-67113.yaml
+++ b/cnvd/2020/CNVD-2020-67113.yaml
@@ -16,6 +16,7 @@ requests:
       - "{{BaseURL}}/api/v1/GetSrc"
       - "{{BaseURL}}/api/v1/GetDevice"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
