--- a/cnvd/2020/CNVD-2020-67113.yaml
+++ b/cnvd/2020/CNVD-2020-67113.yaml
@@ -3,7 +3,7 @@ id: CNVD-2020-67113
 info:
   name: H5S CONSOLE Unauthorized Access Vulnerability (CNVD-2020-67113)
   author: ritikchaddha
-  severity: medium
+  severity: high
   description: Zero Vision Technology (Shanghai) Co., Ltd. H5S CONSOLE Exists Unauthorized Access Vulnerability
   reference: https://vul.wangan.com/a/CNVD-2020-67113
   metadata:
