--- a/exposed-panels/blue-iris-login.yaml
+++ b/exposed-panels/blue-iris-login.yaml
@@ -12,7 +12,9 @@ info:
     cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
     cvss-score: 0.0
     cwe-id: CWE-200
-  tags: panel,blue-iris
+  metadata:
+    shodan-query: http.title:"Blue Iris Login"
+  tags: panel,blueiris
 
 requests:
   - method: GET
@@ -24,6 +26,7 @@ requests:
       - type: word
         words:
           - '<title>Blue Iris Login</title>'
+
       - type: status
         status:
           - 200
