--- a/iot/routeros-login.yaml
+++ b/iot/routeros-login.yaml
@@ -1,12 +1,12 @@
 id: routeros-login
 
 info:
-  name: RouterOS router configuration page login
+  name: RouterOS Router Login Detect
   author: dhiyaneshDK,idealphase
   severity: info
-  tags: panel,router
   metadata:
     shodan-query: 'http.title:"RouterOS router configuration page"'
+  tags: panel,router,routeros
 
 requests:
   - method: GET
