--- a/exposed-panels/zoho/manageengine-opmanager.yaml
+++ b/exposed-panels/zoho/manageengine-opmanager.yaml
@@ -15,8 +15,12 @@ requests:
     matchers-condition: and
     matchers:
       - type: word
+        part: body
         words:
-          - '<h2>OpManager Plus<span>'
+          - "<div class='opmIconsHolder'>"
+          - "<div class='opmLoginFieldHolder'>"
+          - "<div class='opmIconsRight'>"
+        condition: and
 
       - type: status
         status:
