Update and rename checkpoint-ssl-network-extender-login.yaml to ssl-network-extender.yaml

--- a/exposed-panels/ssl-network-extender.yaml
+++ b/exposed-panels/ssl-network-extender.yaml
@@ -1,4 +1,4 @@
-id: checkpoint-ssl-network-extender-login
+id: ssl-network-extender
 
 info:
   name: Check Point SSL Network Extender Login
@@ -9,9 +9,9 @@ info:
     - https://supportcenter.checkpoint.com/supportcenter/portal?eventSubmit_doGoviewsolutiondetails=&solutionid=sk65210
     - https://sc1.checkpoint.com/documents/R81/WebAdminGuides/EN/CP_R81_RemoteAccessVPN_AdminGuide/Topics-VPNRG/SSL-Network-Extender.htm?TocPath=SSL%20Network%20Extender%7C_____0
   metadata:
-    shodan-query: http.title:"SSL Network Extender Login"
+    shodan-query: http.title:"Check Point SSL Network Extender"
     google-query: intitle:"SSL Network Extender Login"
-  tags: panel,checkpoint
+  tags: panel,checkpoint,router
 
 requests:
   - method: GET
