--- a/exposed-panels/zoho/manageengine-opmanager.yaml
+++ b/exposed-panels/zoho/manageengine-opmanager.yaml
@@ -2,9 +2,11 @@ id: manageengine-opmanager
 
 info:
   name: ZOHO ManageEngine OpManager
-  author: dhiyaneshDK
+  author: dhiyaneshDK,daffainfo
   severity: info
-  reference: https://www.shodan.io/search?query=http.title%3A%22OpManager+Plus%22
+  reference: https://www.manageengine.com/
+  metadata:
+    shodan-query: http.title:"OpManager Plus"
   tags: panel,zoho,manageengine
 
 requests:
