--- a/vulnerabilities/other/kingdee-eas-directory-traversal.yaml
+++ b/vulnerabilities/other/kingdee-eas-directory-traversal.yaml
@@ -7,7 +7,7 @@ info:
   description: Kingdee OA server_file has a directory traversal vulnerability, attackers can obtain sensitive server information through directory traversal.
   reference:
     - https://github.com/nu0l/poc-wiki/blob/main/%E9%87%91%E8%9D%B6OA%20server_file%20%E7%9B%AE%E5%BD%95%E9%81%8D%E5%8E%86%E6%BC%8F%E6%B4%9E.md
-  tags: kingdee,lfi
+  tags: kingdee,lfi,traversal
 
 requests:
   - method: GET
