Update and rename residential-gateway-login-page.yaml to residential-gateway-login.yaml

--- a/exposed-panels/residential-gateway-login.yaml
+++ b/exposed-panels/residential-gateway-login.yaml
@@ -1,4 +1,4 @@
-id: residential-gateway-login-page
+id: residential-gateway-login
 
 info:
   name: Residential Gateway Login
@@ -13,7 +13,11 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+      - "{{BaseURL}}/cgi-bin/wwwctrl.cgi?action=home"
 
+    stop-at-first-match: true
+    redirects: true
+    max-redirects: 2
     matchers-condition: and
     matchers:
       - type: word
