--- a/vulnerabilities/other/kingsoft-v8-file-read.yaml
+++ b/vulnerabilities/other/kingsoft-v8-file-read.yaml
@@ -12,7 +12,6 @@ requests:
     path:
       - "{{BaseURL}}/htmltopdf/downfile.php?filename=/windows/win.ini"
 
-    redirects: false
     matchers-condition: and
     matchers:
       - type: word
@@ -20,7 +19,8 @@ requests:
         words:
           - "for 16-bit app support"
           - "[extensions]"
-      
+        condition: and
+
       - type: word
         part: header
         words:
