--- a/vulnerabilities/other/dss-download-fileread.yaml
+++ b/vulnerabilities/other/dss-download-fileread.yaml
@@ -1,11 +1,10 @@
 id: dss-download-fileread
 
 info:
-  name: DSS download Fileread
+  name: DSS Download File Read
   author: ritikchaddha
   severity: high
-  reference: 
-  tags: dss,dssdownload,lfi
+  tags: lfi,dss,lfr
 
 requests:
   - method: GET
