--- a/vulnerabilities/other/pbootcms-database-file-download.yaml
+++ b/vulnerabilities/other/pbootcms-database-file-download.yaml
@@ -1,25 +1,26 @@
 id: pbootcms-database-file-download
 
 info:
-  name: Pbootcms Database file download
+  name: PbootCMS Database file download
   author: ritikchaddha
   severity: high
   reference: https://www.cnblogs.com/0daybug/p/12786036.html
-  tags: pbootcms,database
+  tags: pbootcms,db,exposure,database,sqlite
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/data/pbootcms.db"
 
-    redirects: false
+    max-size: 20000
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
           - "PbootCMS"
-          - "^SQLite format 3\\x00\\x10"
+          - "SQLite format 3"
+        condition: and
 
       - type: status
         status:
