--- a/vulnerabilities/other/pbootcms-database-file-download.yaml
+++ b/vulnerabilities/other/pbootcms-database-file-download.yaml
@@ -1,10 +1,12 @@
 id: pbootcms-database-file-download
 
 info:
-  name: PbootCMS Database file download
+  name: PbootCMS v2.0.7 DB File Download
   author: ritikchaddha
   severity: high
-  reference: https://www.cnblogs.com/0daybug/p/12786036.html
+  reference:
+    - https://xz.aliyun.com/t/7628
+    - https://www.cnblogs.com/0daybug/p/12786036.html
   tags: pbootcms,db,exposure,database,sqlite
 
 requests:
