--- a/default-logins/others/kingsoft-v8-default-login.yaml
+++ b/default-logins/others/kingsoft-v8-default-login.yaml
@@ -1,20 +1,26 @@
-id: kingsoft-v8-default-password
+id: kingsoft-v8-default-login
 
 info:
-  name: Kingsoft V8 Default Password
+  name: Kingsoft V8 Default Login
   author: ritikchaddha
   severity: medium
   reference: https://idc.wanyunshuju.com/aqld/2123.html
-  tags: kingsoft,password
+  tags: kingsoft,default-login
 
 requests:
   - raw:
       - |
-        POST /tmui/locallb/workspace/tmshCmd.jsp HTTP/1.1
+        POST /inter/ajax.php?cmd=get_user_login_cmd HTTP/1.1
         Host: {{Hostname}}
 
-        {"get_user_login_cmd":{"name":"admin","password":"21232f297a57a5a743894a0e4a801fc3"}}
+        {"get_user_login_cmd":{"name":"{{username}}","password":"{{md5("{{password}}")}}"}}
 
+    attack: pitchfork
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
     redirects: true
     max-redirects: 2
     matchers-condition: and
@@ -24,6 +30,7 @@ requests:
         words:
           - "ADMIN"
           - "userSession"
+        condition: and
 
       - type: status
         status:
