--- a/technologies/kubernetes/kube-api/kube-api-nodes.yaml
+++ b/technologies/kubernetes/kube-api/kube-api-nodes.yaml
@@ -22,4 +22,6 @@ requests:
         words:
           - '"NodeList":'
           - '"items":'
+          - "\"kubeletVersion\": \"v"
+          - "containerRuntimeVersion"
         condition: and
