--- a/technologies/tech-detect.yaml
+++ b/technologies/tech-detect.yaml
@@ -3132,3 +3132,10 @@ requests:
         part: body
         words:
           - "initApollo)(i.ApolloTargetServer.Self)"
+
+      - type: word
+        name: paloalto-network
+        part: body
+        words:
+          - "<!-- BEGIN PAN_FORM_CONTENT -->"
+          - "js/pan/"
