added missing condition

--- a/exposed-panels/racksnet-login.yaml
+++ b/exposed-panels/racksnet-login.yaml
@@ -18,11 +18,12 @@ requests:
     path:
       - "{{BaseURL}}"
 
+    matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "<title>\nMy Datacenter - Login\n</title>"
+          - "My Datacenter - Login"
 
       - type: status
         status:
