--- a/default-logins/apache/dubbo-admin-default-login.yaml
+++ b/default-logins/apache/dubbo-admin-default-login.yaml
@@ -5,23 +5,17 @@ info:
   author: ritikchaddha
   severity: high
   reference: https://www.cnblogs.com/wishwzp/p/9438658.html
-  tags: dubbo,admin,defaultlogin
+  tags: dubbo,apache,default-login
 
 requests:
   - raw:
       - |
-        GET /api/whoami HTTP/1.1
-        Host: {{Hostname}}
-        Content-Type: application/x-www-form-urlencoded
-        Authorization: Basic {{base64(username + ':' + password)}}
-        
-  - raw:
-      - |
-        GET /api/whoami HTTP/1.1
+        GET / HTTP/1.1
         Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
         Authorization: Basic {{base64(username + ':' + password)}}
 
+    attack: pitchfork
     payloads:
       username:
         - guest
@@ -29,7 +23,6 @@ requests:
       password:
         - guest
         - root
-    attack: pitchfork
 
     matchers-condition: and
     matchers:
@@ -37,12 +30,8 @@ requests:
         words:
           - "<title>Dubbo Admin</title>"
           - "/sysinfo/versions"
-
-      - type: word
-        words:
-          - ": guest', '/logout'"
-          - ": root', '/logout'"
-        condition: or      
+          - "{{username}}', '/logout')"
+        condition: and
 
       - type: status
         status:
