--- a/vulnerabilities/other/tongda-session-disclosure.yaml
+++ b/vulnerabilities/other/tongda-session-disclosure.yaml
@@ -1,34 +1,30 @@
-id: tongda-user-session-disclosure
+id: tongda-session-disclosure
 
 info:
   name: Tongda User Session Disclosure
   author: ritikchaddha
   severity: medium
-  reference: https://mp.weixin.qq.com/s/llyGEBRo0t-C7xOLMDYfFQ 
-  tags: tongda,usersession,disclosure
+  reference: https://mp.weixin.qq.com/s/llyGEBRo0t-C7xOLMDYfFQ
+  tags: tongda,disclosure
 
 requests:
-  - method: GET
-    path:
-      - "{{BaseURL}}/mobile/auth_mobi.php?isAvatar=1&uid=1&P_VER=0"
-      
   - method: POST
     path:
       - "{{BaseURL}}/general/userinfo.php?UID=1"
 
-    redirects: false
     matchers-condition: and
     matchers:
       - type: word
-        words:
-          - "\"dept_name\":\""
-          - ""online_flag\":"
         part: body
+        words:
+          - '"dept_name":"'
+          - '"online_flag":'
+        condition: and
 
       - type: word
+        part: header
         words:
           - "application/json"
-        part: header
         condition: and
 
       - type: status
