--- a/default-logins/Jinher-oa-default-login.yaml
+++ b/default-logins/Jinher-oa-default-login.yaml
@@ -5,39 +5,39 @@ info:
   author: ritikchaddha
   severity: high
   description: Jinher-OA C6 default administrator account credential.
-  tags: jinher,jinher-oa,default-login
   reference:
     - https://github.com/nu0l/poc-wiki/blob/main/%E9%87%91%E5%92%8COA-C6-default-password.md
+  tags: jinher,default-login
 
 requests:
   - raw:
       - |
         POST /c6/Jhsoft.Web.login/AjaxForLogin.aspx HTTP/1.1
         Host: {{Hostname}}
-	Content-Type: application/x-www-form-urlencoded
+        Content-Type: application/x-www-form-urlencoded
 
-        type=login&loginCode={{code}}&pwd={{pass}}
+        type=login&loginCode={{base64("{{username}}")}}&pwd={{base64("{{password}}")}}&
 
- attack: pitchfork
+    attack: pitchfork
     payloads:
-      code:
-        - YWRtaW4=&
-      pass:
-        - MDAwMDAw&
+      username:
+        - admin
+      password:
+        - "000000"
 
     matchers-condition: and
     matchers:
       - type: word
+        part: body
         words:
           - "\xcf\xb5\xcd\xb3\xb9\xdc\xc0\xed\xd4\xb1\x7c"
           - "\xc4\xfa\xba\xc3\x7c\x7c\x7c"
-        part: body
         condition: and
 
       - type: word
-        words:
-          - "Set-Cookie= SessionIDAdmin="
         part: header
+        words:
+          - "SessionIDAdmin="
 
       - type: status
         status:
