--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -445,8 +445,6 @@ requests:
         name: "3cx-phone-system"
         dsl:
           - "status_code==200 && (\"970132176\" == mmh3(base64_py(body)))"
-          - "status_code==200 && (\"970132176\" == mmh3(base64_py(body)))"
-        condition: or
 
       - type: dsl
         name: "bluehost"
@@ -2567,3 +2565,8 @@ requests:
         name: "cisco-ucs"
         dsl:
           - "status_code==200 && (\"-521603470\" == mmh3(base64_py(body)))"
+
+      - type: dsl
+        name: "vmware-Workspace-ONE-Access"
+        dsl:
+          - "status_code==200 && (\"-1250474341\" == mmh3(base64_py(body)))"
