--- a/iot/sony-camera-backdoor.yaml
+++ b/iot/sony-camera-backdoor.yaml
@@ -15,7 +15,7 @@ info:
     cvss-score: 6.50
     cve-id: CVE-2016-7834
     cwe-id: CWE-798
-  tags: sony,backdoor,unauth,telnet
+  tags: sony,backdoor,unauth,telnet,iot
 
 requests:
   - method: GET
