Update and rename qizhi-fortressaircraft-unauthorized.yaml to qizhi-fortressaircraft-unauth.yaml

--- a/vulnerabilities/other/qizhi-fortressaircraft-unauth.yaml
+++ b/vulnerabilities/other/qizhi-fortressaircraft-unauth.yaml
@@ -1,11 +1,11 @@
-id: qizhi-fortressaircraft-unauthorized
+id: qizhi-fortressaircraft-unauth
 
 info:
-  name: Qizhi Fortressaircraft Unauthorized
+  name: Qizhi Fortressaircraft Unauthorized Acccess
   author: ritikchaddha
   severity: high
   reference: https://mp.weixin.qq.com/s/FjMRJfCqmXfwPzGYq5Vhkw
-  tags: qizhi,fortressaircraft,unauthorized
+  tags: qizhi,fortressaircraft,unauth
 
 requests:
   - method: GET
@@ -15,10 +15,12 @@ requests:
     matchers-condition: and
     matchers:
       - type: word
+        part: body
         words:
           - "错误的id"
           - "审计管理员"
           - "事件审计"
+        condition: and
 
       - type: status
         status:
