--- a/technologies/kubernetes/kube-api/kube-api-nodes.yaml
+++ b/technologies/kubernetes/kube-api/kube-api-nodes.yaml
@@ -11,17 +11,18 @@ requests:
     path:
       - "{{BaseURL}}/api/v1/nodes"
 
-    matchers-condition: and
+    matchers-condition: or
     matchers:
-      - type: status
-        status:
-          - 200
-
       - type: word
         part: body
         words:
           - '"NodeList":'
           - '"items":'
-          - "\"kubeletVersion\": \"v"
-          - "containerRuntimeVersion"
+        condition: and
+
+      - type: word
+        part: body
+        words:
+          - '"containerRuntimeVersion"'
+          - '"kubeletVersion": "v'
         condition: and
