--- a/technologies/kubernetes/kube-api/kube-api-nodes.yaml
+++ b/technologies/kubernetes/kube-api/kube-api-nodes.yaml
@@ -1,7 +1,7 @@
 id: kube-api-nodes
 info:
   name: Kube API Nodes
-  author: sharath
+  author: sharath,ritikchaddha
   severity: info
   description: Scans for kube nodes
   tags: tech,k8s,kubernetes,devops,kube
