Updated Nuclei Template

--- a/default-logins/fuelcms/fuelcms-default-login.yaml
+++ b/default-logins/fuelcms/fuelcms-default-login.yaml
@@ -6,7 +6,7 @@ info:
   severity: high
   tags: fuelcms,default-login
   description: Fuel CMS default admin credentials were discovered.
-  reference: Checks thed 
+  reference:
     - https://docs.getfuelcms.com/general/security
 
 requests:
