Update and rename technologies/fuelcms-detect.yaml to exposed-panels/fuelcms-panel.yaml

--- a/exposed-panels/fuelcms-panel.yaml
+++ b/exposed-panels/fuelcms-panel.yaml
@@ -1,10 +1,10 @@
-id: fuelcms-detect
+id: fuelcms-panel
 
 info:
-  name: Fuel CMS Detect
+  name: Fuel CMS Panel
   author: Adam Crosser
   severity: info
-  tags: tech,fuelcms
+  tags: panel,fuelcms
 
 requests:
   - method: GET
@@ -16,7 +16,7 @@ requests:
       - type: word
         part: body
         words:
-          - "/fuel/modules"
+          - "<title>FUEL CMS</title>"
 
       - type: status
         status:
