--- a/exposed-panels/fuelcms-panel.yaml
+++ b/exposed-panels/fuelcms-panel.yaml
@@ -4,7 +4,7 @@ info:
   name: Fuel CMS Panel
   author: Adam Crosser
   severity: info
-  tags: panel,fuelcms
+  tags: panel,fuelcms,oss
 
 requests:
   - method: GET
