--- a/technologies/elfinder-version.yaml
+++ b/technologies/elfinder-version.yaml
@@ -32,5 +32,5 @@ requests:
       - type: regex
         group: 1
         regex:
-          - "\* Version (.+) \("
-          - "elFinder\.prototype\.version = '([0-9.]+)';"
+          - '\* Version (.+) \('
+          - "elFinder.prototype.version = '([0-9.]+)';"
