Update and rename exposed-panels/avayaaura-manager-panel.yaml to exposed-panels/avaya/avayaaura-system-manager-panel.yaml

--- a/exposed-panels/avaya/avayaaura-system-manager-panel.yaml
+++ b/exposed-panels/avaya/avayaaura-system-manager-panel.yaml
@@ -1,4 +1,4 @@
-id: avayaaura-manager-panel
+id: avayaaura-system-manager-panel
 
 info:
   name: Avaya Aura System Manager Panel
@@ -13,11 +13,12 @@ requests:
 
     matchers-condition: and
     matchers:
-
       - type: word
         part: body
         words:
-          - "Avaya Aura <sup>"
+          - "Avaya Aura"
+          - "System Manager"
+        condition: and
 
       - type: status
         status:
