--- a/exposed-panels/avaya/avayaaura-cm-panel.yaml
+++ b/exposed-panels/avaya/avayaaura-cm-panel.yaml
@@ -16,7 +16,9 @@ requests:
       - type: word
         part: body
         words:
-          - "Avaya Aura<sup>&reg;</sup> Communication Manager (CM)"
+          - "Avaya Aura"
+          - "Communication Manager (CM)"
+        condition: and
 
       - type: status
         status:
