--- a/exposed-panels/oracle-containers-panel.yaml
+++ b/exposed-panels/oracle-containers-panel.yaml
@@ -2,7 +2,7 @@ id: oracle-containers-panel
 
 info:
   name: Oracle Containers for J2EE 10g Panel
-  author: dogasanots
+  author: dogasantos
   severity: info
   tags: panel,oracle,containers
 
