--- a/exposed-panels/oracle-enterprise-manager-login.yaml
+++ b/exposed-panels/oracle-enterprise-manager-login.yaml
@@ -2,7 +2,7 @@ id: oracle-enterprise-manager-login
 
 info:
   name: Oracle Enterprise Manager login
-  author: dogasanots
+  author: dogasantos
   severity: info
   tags: panel,oracle,manager,login
 
