--- a/technologies/eyesofnetwork-panel-detect.yaml
+++ b/technologies/eyesofnetwork-panel-detect.yaml
@@ -3,11 +3,10 @@ id: eyesofnetwork-panel-detect
 info:
   name: EyesOfNetwork Detect
   author: praetorian-thendrickson
-  severity: high
+  severity: info
   description: EyesOfNetwork detection
   tags: tech,cisa
-  reference: 
-	- https://www.eyesofnetwork.com/en
+  reference: https://www.eyesofnetwork.com/en
 
 requests:
   - method: GET
