--- a/technologies/eyesofnetwork-detect.yaml
+++ b/technologies/eyesofnetwork-detect.yaml
@@ -1,23 +1,25 @@
-id: eyesofnetwork-panel-detect
+id: eyesofnetwork-detect
 
 info:
   name: EyesOfNetwork Detect
   author: praetorian-thendrickson
   severity: info
   description: EyesOfNetwork detection
-  tags: tech,cisa
   reference: https://www.eyesofnetwork.com/en
+  tags: tech,cisa,eyesofnetwork
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/css/eonweb.css"
+      - "{{BaseURL}}/login.php"
+
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          -  "EyesOfNetwork"
+          - "<title>EyesOfNetwork</title>"
+
       - type: status
         status:
           - 200
