Added mspcontrol-login.yaml, bigfix-login.yaml and Updated favicon-detection.yaml  (#4166)
* Added mspcontrol-login.yaml

Added mspcontrol-login.yaml

* Updated favicon-detection.yaml

Added mspcontrol favicon detection

* Updated favicon-detection.yaml

Deleted empty line

* Added bigfix-login.yaml

Added bigfix-login.yaml

* misc update

Co-authored-by: Sandeep Singh <sandeep@projectdiscovery.io>

--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2570,3 +2570,8 @@ requests:
         name: "vmware-Workspace-ONE-Access"
         dsl:
           - "status_code==200 && (\"-1250474341\" == mmh3(base64_py(body)))"
+
+      - type: dsl
+        name: "mspcontrol"
+        dsl:
+          - "status_code==200 && (\"331817455\" == mmh3(base64_py(body)))"
