--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2575,3 +2575,9 @@ requests:
         name: "mspcontrol"
         dsl:
           - "status_code==200 && (\"331817455\" == mmh3(base64_py(body)))"
+
+      - type: dsl
+        name: "Ionic"
+        dsl:
+          - "status_code==200 && (\"-1698328762\" == mmh3(base64_py(body)))"
+
