--- a/token-spray/api-coinmarketcap.yaml
+++ b/token-spray/api-coinmarketcap.yaml
@@ -13,7 +13,7 @@ self-contained: true
 requests:
   - raw:
       - |
-        GET /v1/cryptocurrency/listings/latest HTTP/1.1
+        GET https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest HTTP/1.1
         Host: pro-api.coinmarketcap.com
         X-CMC_PRO_API_KEY: {{token}}
 
