--- a/vulnerabilities/other/zzcms-xss.yaml
+++ b/vulnerabilities/other/zzcms-xss.yaml
@@ -14,6 +14,7 @@ requests:
       - "{{BaseURL}}/user/msg.php?action=modify&id=198445%22%2balert(233)%2b%221"
       - "{{BaseURL}}/admin/usermodify.php?id=1%22%2balert(345)%2b%22"
 
+    stop-at-first-match: true
     matchers-condition: or
     matchers:
       - type: word
