Added tufin-securetrack-login.yaml  & Updated favicon-detection.yaml (#4190)
* Updated favicon-detection.yaml

Added Tufin SecureTrack favicon detection

* Added tufin-securetrack-login.yaml

Added Tufin SecureTrack Login detection

* Update favicon-detection.yaml

remove too many blank lines (1 > 0)

--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2580,3 +2580,8 @@ requests:
         name: "Ionic"
         dsl:
           - "status_code==200 && (\"-1698328762\" == mmh3(base64_py(body)))"
+
+      - type: dsl
+        name: "Tufin-SecureTrack"
+        dsl:
+          - "status_code==200 && (\"-1238669242\" == mmh3(base64_py(body)))"
