--- a/misconfiguration/unauthenticated-popup-upload.yaml
+++ b/misconfiguration/unauthenticated-popup-upload.yaml
@@ -5,7 +5,7 @@ info:
   author: DhiyaneshDk
   severity: info
   reference: https://www.exploit-db.com/ghdb/6671
-  tags: fileupload
+  tags: fileupload,upload
 
 requests:
   - method: GET
