--- a/exposed-panels/aptus-detect.yaml
+++ b/exposed-panels/aptus-detect.yaml
@@ -4,6 +4,8 @@ info:
   name: Aptus Login Panel
   author: princechaddha
   severity: info
+  metadata:
+    shodan-query: http.html:"Aptus Login"
   tags: panel,aptus
 
 requests:
