--- a/exposed-panels/aptus-detect.yaml
+++ b/exposed-panels/aptus-detect.yaml
@@ -5,7 +5,7 @@ info:
   author: princechaddha
   severity: info
   metadata:
-    shodan-query: http.html:"Aptus Login"
+    shodan-query: http.title:"Aptus Login"
   tags: panel,aptus
 
 requests:
