--- a/vulnerabilities/other/tianqing-info-leak.yaml
+++ b/vulnerabilities/other/tianqing-info-leak.yaml
@@ -3,10 +3,10 @@ id: tianqing-info-leak
 info:
   name: Tianqing Info Leak
   author: ritikchaddha
-  severity: high
+  severity: medium
   reference:
     - https://mp.weixin.qq.com/s/wH5luLISE_G381W2ssv93g
-  tags: tianqing,leak
+  tags: tianqing,exposure
 
 requests:
   - method: GET
@@ -15,17 +15,18 @@ requests:
 
     matchers-condition: and
     matchers:
-
       - type: word
+        part: body
         words:
           - "schema_name"
           - "table_name"
-        part: body
+          - "table_size"
+        condition: and
 
       - type: word
+        part: header
         words:
           - "application/json"
-        part: header
 
       - type: status
         status:
