parts update to use response instead of all

--- a/exposures/configs/exposed-gitignore.yaml
+++ b/exposures/configs/exposed-gitignore.yaml
@@ -35,6 +35,6 @@ requests:
           - "<script"
           - "<meta"
           - "image/"
-        part: all
+        part: response
         negative: true
         condition: or
