--- a/technologies/tech-detect.yaml
+++ b/technologies/tech-detect.yaml
@@ -3090,7 +3090,7 @@ requests:
           - "<title>Mida eFramework</title>"
           - "Server: Mida eFramework"
         condition: or
-        part: all
+        part: response
 
       - type: word
         name: SEEEMS-CMS
