Fix multi-line remediation value in google-earth-dlogin.yaml

--- a/default-logins/google/google-earth-dlogin.yaml
+++ b/default-logins/google/google-earth-dlogin.yaml
@@ -4,10 +4,13 @@ info:
   name: Google Earth Enterprise Default Login
   author: orpheus,johnjhacking
   severity: high
-  description: Google Earth Enterprise default login credentials were discovered.
-  remediation: "To reset the username and password:
-sudo /opt/google/gehttpd/bin/htpasswd -c
-/opt/google/gehttpd/conf.d/.htpasswd geapacheuse"
+  description: |
+    Google Earth Enterprise default login credentials were discovered.
+  remediation: |+
+    To reset the username and password:
+
+    sudo /opt/google/gehttpd/bin/htpasswd -c
+    /opt/google/gehttpd/conf.d/.htpasswd geapacheuse"
   tags: default-login,google-earth
   reference:
     - https://johnjhacking.com/blog/gee-exploitation/
