--- a/exposed-panels/tenda-11n-wireless-router-login.yaml
+++ b/exposed-panels/tenda-11n-wireless-router-login.yaml
@@ -1,7 +1,7 @@
-id: tenda-11n-wireless-router-login
+id: tenda-11n-wireless-router-panel
 
 info:
-  name: Tenda 11n Wireless Router Login
+  name: Tenda 11n Wireless Router Panel
   author: idealphase
   severity: info
   description: Tenda technology is the recognized leading supplier of networking devices and equipments. Tenda has committed to delivering easy-to-install and affordable networking solutions, offering innovative, cutting-edge products to realize people's intelligent life.
