Updated favicon-detection.yaml (#4215)
* Updated favicon-detection.yaml

Added WSO2 API favicon detection

* Updated favicon-detection.yaml

Delete trailing spaces

--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2585,3 +2585,8 @@ requests:
         name: "Tufin-SecureTrack"
         dsl:
           - "status_code==200 && (\"-1238669242\" == mmh3(base64_py(body)))"
+
+      - type: dsl
+        name: "WSO2-api-manager"
+        dsl:
+          - "status_code==200 && (\"1398055326\" == mmh3(base64_py(body)))"
