--- a/exposed-panels/opencast-detect.yaml
+++ b/exposed-panels/opencast-detect.yaml
@@ -1,10 +1,10 @@
 id: opencast-panel
 
 info:
-  name: Opencast Panel Login
+  name: Opencast Admin Panel Discovery
   author: cyllective,daffainfo
   severity: info
-  description: The free and open source solution for automated video capture and distribution at scale.
+  description: An Opencast Admin panel was discovered. Opencast is a free and open source solution for automated video capture and distribution at scale.
   reference: https://github.com/opencast/opencast
   tags: panel,opencast
 
@@ -23,3 +23,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by mp on 2022/04/21
