--- a/network/vnc-detect.yaml
+++ b/network/vnc-detect.yaml
@@ -3,8 +3,14 @@ info:
   name: VNC Service Detection
   author: pussycat0x
   severity: info
+  description: A Virtual Network Computing (VNC) service was detected.
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:N
+    cvss-score: 0.0
+    cve-id:
+    cwe-id: CWE-200
   tags: network,vnc,service
-  description: VNC service detection
+
 network:
   - inputs:
       - data: "\r\n"
@@ -22,3 +28,5 @@ network:
         part: body
         regex:
           - "RFB ([0-9.]+)"
+
+# Enhanced by mp on 2022/04/20
