Update and rename api-hirak-exchange-rates.yaml to api-hirak-rates.yaml

--- a/token-spray/api-hirak-rates.yaml
+++ b/token-spray/api-hirak-rates.yaml
@@ -1,4 +1,4 @@
-id: api-hirak-exchange-rates
+id: api-hirak-rates
 
 info:
   name: Hirak Exchange Rates API Test
@@ -7,7 +7,7 @@ info:
   reference:
     - https://rates.hirak.site/
     - https://github.com/daffainfo/all-about-apikey/blob/main/Cryptocurrency/Hirak%20Exchange%20Rates.md
-  tags: token-spray,hirakexchangerates
+  tags: token-spray,hirak
 
 self-contained: true
 requests:
