--- a/exposed-panels/synapse-mobility-panel.yaml
+++ b/exposed-panels/synapse-mobility-panel.yaml
@@ -10,7 +10,7 @@ info:
   metadata:
     shodan-query: http.title:"Synapse Mobility Login"
     google-query: intitle:"Synapse Mobility Login"
-  tags: panel,tenda
+  tags: panel,synapse
 
 requests:
   - method: GET
