--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2590,3 +2590,8 @@ requests:
         name: "WSO2-api-manager"
         dsl:
           - "status_code==200 && (\"1398055326\" == mmh3(base64_py(body)))"
+
+      - type: dsl
+        name: "Synapse-Mobility"
+        dsl:
+          - "status_code==200 && (\"-2015389528\" == mmh3(base64_py(body)))"
