--- a/default-login/openemr/OpenEMR-default-login.yaml
+++ b/default-login/openemr/OpenEMR-default-login.yaml
@@ -11,7 +11,10 @@ info:
     cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
     cvss-score: 8.3
     cwe-id: CWE-522
-  tags: OpenEMR,default-login
+  metadata:
+    fofa-query: app="OpenEMR"
+    shodan-query: http.html:"OpenEMR"
+  tags: openemr,default-login
 
 requests:
   - raw:
@@ -34,6 +37,7 @@ requests:
       - type: status
         status:
           - 302
+
       - type: word
         part: header
         words:
