--- a/default-login/openemr/OpenEMR-default-login.yaml
+++ b/default-login/openemr/OpenEMR-default-login.yaml
@@ -34,11 +34,13 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: status
-        status:
-          - 302
-
       - type: word
         part: header
         words:
-          - "main.php"
+          - "main.php?token_main="
+          - "OpenEMR"
+        condition: and
+
+      - type: status
+        status:
+          - 302
