--- a/technologies/microsoft/microsoft-sharepoint-detect.yaml
+++ b/technologies/microsoft/microsoft-sharepoint-detect.yaml
@@ -5,16 +5,19 @@ info:
   author: p-l-
   severity: info
   description: Check for SharePoint, using HTTP header MicrosoftSharePointTeamServices
+  tags: sharepoint,iis,microsoft,tech
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers:
-      - type: word
-        words:
-          - "Microsoftsharepointteamservices:"
+      - type: regex
         part: header
+        regex:
+          - "(?i)(Microsoftsharepointteamservices:)"
+
     extractors:
       - type: kval
         kval:
