Update and rename ruckus-wireless-panel.yaml to ruckus-unleashed-panel.yaml

--- a/exposed-panels/ruckus-unleashed-panel.yaml
+++ b/exposed-panels/ruckus-unleashed-panel.yaml
@@ -1,7 +1,7 @@
-id: ruckus-wireless-panel
+id: ruckus-unleashed-panel
 
 info:
-  name: Ruckus Wireless Login Panel
+  name: Ruckus Wireless Unleashed Login Panel
   author: idealphase
   severity: info
   description: RUCKUS builds and delivers purpose-driven networks that perform in the tough environments of the industries we serve. Together with our trusted go-to-market partners, we empower our customers to deliver exceptional experiences to the guests, students, residents, citizens and employees who are counting on them.
