--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2595,3 +2595,8 @@ requests:
         name: "Synapse-Mobility"
         dsl:
           - "status_code==200 && (\"-2015389528\" == mmh3(base64_py(body)))"
+
+      - type: dsl
+        name: "Gradle-enterprise"
+        dsl:
+          - "status_code==200 && (\"1614287628\" == mmh3(base64_py(body)))"
