--- a/vulnerabilities/other/avada-xss.yaml
+++ b/vulnerabilities/other/avada-xss.yaml
@@ -21,6 +21,8 @@ requests:
         part: body
         words:
           - "</script><script>alert(document.domain)</script>"
+          - "avada-footer-scripts"
+        condition: and
 
       - type: word
         part: header
