--- a/default-logins/phpmyadmin/phpmyadmin-default-login.yaml
+++ b/default-logins/phpmyadmin/phpmyadmin-default-login.yaml
@@ -4,6 +4,8 @@ info:
   name: phpMyAdmin Default Login
   author: Natto97
   severity: high
+  metadata:
+    shodan-query: http.title:phpMyAdmin
   description: phpMyAdmin default admin credentials were discovered
   reference:
     - https://www.phpmyadmin.net/
