--- a/default-logins/phpmyadmin/phpmyadmin-default-login.yaml
+++ b/default-logins/phpmyadmin/phpmyadmin-default-login.yaml
@@ -44,14 +44,14 @@ requests:
         internal: true
         group: 1
         regex:
-          - 'name="token" value="(.*?)">'
+          - 'name="token" value="([0-9a-z]+)"'
 
       - type: regex
         name: token2
         internal: true
         group: 1
         regex:
-          - 'name="set_session" value="(.*?)">'
+          - 'name="set_session" value="([0-9a-z]+)"'
 
       - type: regex
         name: session
@@ -67,7 +67,6 @@ requests:
       - type: word
         part: header
         words:
-          - "/index.php?route"
           - "phpMyAdmin="
           - "pmaUser-1="
         case-insensitive: true
