--- a/misconfiguration/aem/aem-xss-childlist-selector.yaml
+++ b/misconfiguration/aem/aem-xss-childlist-selector.yaml
@@ -24,6 +24,7 @@ requests:
       - type: word
         words:
           - '<svg onload=alert(document.domain)>'
+          - '/etc/designs/xh1x.childrenlist.json'
 
       - type: word
         part: header
