--- a/misconfiguration/aem/aem-xss-childlist-selector.yaml
+++ b/misconfiguration/aem/aem-xss-childlist-selector.yaml
@@ -24,7 +24,8 @@ requests:
       - type: word
         words:
           - '<svg onload=alert(document.domain)>'
-          - '/etc/designs/xh1x.childrenlist.json'
+          - '{"path":"/etc/designs/xh1x.childrenlist.json'
+        condition: and
 
       - type: word
         part: header
