--- a/exposures/files/desktop-ini-exposure.yaml
+++ b/exposures/files/desktop-ini-exposure.yaml
@@ -15,19 +15,20 @@ requests:
 
     matchers-condition: and
     matchers:
-
       - type: word
         part: header
+        negative: true
         words:
-          - "application/octet-stream"
-          - "text/plain"
-        condition: or
+          - "application/json"
+          - "application/html"
+        condition: and
 
       - type: word
         part: body
         words:
           - "[.ShellClassInfo]"
           - "[LocalizedFileNames]"
+          - "[ViewState]"
         condition: or
 
       - type: status
