--- a/exposed-panels/supermicro-bmc-panel.yaml
+++ b/exposed-panels/supermicro-bmc-panel.yaml
@@ -12,7 +12,7 @@ info:
   metadata:
     shodan-query: http.title:"Supermicro BMC Login"
     google-dork: intitle:"Supermicro BMC Login"
-  tags: panel,supermicro
+  tags: panel,supermicro,bmc
 
 requests:
   - method: GET
