Clean MS Exchange detection (#4243)
* Clean MS Exchange detect

  - Extract version from body when the header is missing

  - Makes it clear that we are looking either for a header or for
    specific body content

  - Accept older (and newer) versions

* misc updates

Co-authored-by: Pierre Lalet <pierre@drids-corp.org>
Co-authored-by: sandeep <sandeep@projectdiscovery.io>

--- a/technologies/microsoft/ms-exchange-server.yaml
+++ b/technologies/microsoft/ms-exchange-server.yaml
@@ -1,4 +1,4 @@
-id: microsoft-exchange-server-detect
+id: ms-exchange-server
 
 info:
   name: Microsoft Exchange Server Detect
@@ -16,11 +16,15 @@ requests:
 
     matchers-condition: or
     matchers:
+      - type: regex
+        part: header
+        regex:
+          - "(?i)(X-Owa-Version:)"
 
       - type: regex
+        part: body
         regex:
-          - "(X-Owa-Version:|/owa/auth/15.2.*|/owa/auth/15.1.*|/owa/auth/15.0.*|/owa/auth/14.0.*)"
-        part: response
+          - "/owa/auth/[0-9.]+/"
 
       - type: word
         words:
@@ -30,4 +34,10 @@ requests:
     extractors:
       - type: kval
         kval:
-          - X_Owa_Version
+          - x_owa_version
+
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - "/owa/auth/([0-9.]+)/"
